--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">= 6"
   },
   "dependencies": {
-    "node-sass": "^4.5.3"
+    "sass": "^1.60.0"
   },
   "peerDependencies": {
     "hexo": ">= 3"
